[package]
name = "simplejit-repl"
version = "0.0.0"
authors = ["The Cranelift Project Developers", "Milkey Mouse"]
build = "build.rs"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/tachibana-lab/simplejit-repl"
description = "REPL for a toy language implemented using cranelift-simplejit"

[[bin]]
name = "repl"
path = "src/main.rs"

[dependencies]
cranelift = "0.25.0"
cranelift-module = "0.25.0"
cranelift-simplejit = "0.25.0"
peg = "0.5.4"
rustyline = "3.0.0"

[build-dependencies]
peg = { version = "0.5.4" }
